[package]
name = "iroh-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features= ["multipart"]}
iroh = "0.31.0"
iroh-base = "0.31.0"
iroh-blobs = { version = "0.31.0", features = ["rpc"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = "0.6"
futures = "0.3"
serde = "1.0.217"
serde_json = "1.0.137"
rand = "0.8.5"
